# AF3Parallel

./: .gitignore  AF3Parallel.py  AF3_CPU_time_estimate.py  AF3_JSON_Integrator.py  AF3__GPU_Memory_Time-Series_Profiler.py  CHANGELOG.md  CITATION.cff  GPU_monitor.py  LICENSE  README.md  gitignore  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
docs/: README.md  cli-reference.md  gpu-profiles.md  installation.md  json-integrator.md  publishing.md  tips.md  workflow.md
examples/: ligands.csv
src/af3parallel/: __init__.py  __main__.py  _entrypoints.py  gpu_memory_profiler.py  gpu_time_estimate.py  json_integrator.py
src/af3parallel/cli/: __init__.py  main.py
tools/: publish-pypi.ps1  publish-pypi.sh
